--- a/arch/arm/configs/tegra3_android_defconfig
+++ b/arch/arm/configs/tegra3_android_defconfig
@@ -207,6 +207,7 @@ CONFIG_AD525X_DPOT=y
 CONFIG_AD525X_DPOT_I2C=y
 CONFIG_APDS9802ALS=y
 CONFIG_SENSORS_NCT1008=y
+CONFIG_SENSORS_AP321xx=y
 CONFIG_UID_STAT=y
 CONFIG_BCM4330_RFKILL=y
 CONFIG_TEGRA_CRYPTO_DEV=y
