--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -400,6 +400,22 @@ config SENSORS_AK8975
 	  If you say yes here you get support for Asahi Kasei's
 	  orientation sensor AK8975.
 
+config SENSORS_AP3xx6
+	tristate "AP3xx6 ALS-PS support"
+	default n
+	depends on I2C
+	help
+	  If you say yes here you get support for Dyna-Image's
+	  ALS+PS sensor AP3426.
+	 
+config SENSORS_AP321xx
+	tristate "AP321xx ALS-PS support"
+	default n
+	depends on I2C
+	help
+	  If you say yes here you get support for Dyna-Image's
+	  ALS+PS sensor AP3212/3216.
+	  	  
 config SENSORS_NCT1008
 	tristate "ON Semiconductor Temperature Sensor"
 	default n
@@ -576,5 +592,5 @@ source "drivers/misc/ti-st/Kconfig"
 source "drivers/misc/lis3lv02d/Kconfig"
 source "drivers/misc/carma/Kconfig"
 source "drivers/misc/tegra-baseband/Kconfig"
-
+#source "drivers/misc/ap3xx6/Kconfig"
 endif # MISC_DEVICES
