--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -53,7 +53,7 @@ obj-$(CONFIG_WL127X_RFKILL)	+= wl127x-rfkill.o
 obj-$(CONFIG_APANIC)		+= apanic.o
 obj-$(CONFIG_SENSORS_AK8975)	+= akm8975.o
 obj-$(CONFIG_SENSORS_AP3xx6)	+= ap3xx6c.o
-obj-$(CONFIG_SENSORS_AP321xx)	+= ap321xx.o
+obj-$(CONFIG_SENSORS_AP321XX)	+= ap321xx.o
 obj-$(CONFIG_SENSORS_NCT1008)	+= nct1008.o
 obj-$(CONFIG_BCM4329_RFKILL)	+= bcm4329_rfkill.o
 obj-$(CONFIG_BCM4330_RFKILL)	+= bcm4330_rfkill.o
