--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -416,6 +416,13 @@ config SENSORS_AP321XX
 	  If you say yes here you get support for Dyna-Image's
 	  ALS+PS sensor AP3212/3216.
 	  	  
+config SENSORS_AP3426
+	tristate "AP3426 ALS-PS support"
+	default n
+	depends on I2C
+	help
+	  If you say yes here you get support for Dyna-Image's
+	  ALS+PS sensor AP3426.
 config SENSORS_NCT1008
 	tristate "ON Semiconductor Temperature Sensor"
 	default n
