Change sysfs path for AP3426

--- a/arch/arm/configs/tegra3_android_defconfig
+++ b/arch/arm/configs/tegra3_android_defconfig
@@ -208,8 +208,8 @@ CONFIG_AD525X_DPOT_I2C=y
 CONFIG_APDS9802ALS=y
 CONFIG_SENSORS_NCT1008=y
 #CONFIG_SENSORS_AP321XX=y
-#CONFIG_SENSORS_AP3426=y
-CONFIG_SENSORS_CX5036=y
+CONFIG_SENSORS_AP3426=y
+#CONFIG_SENSORS_CX5036=y
 CONFIG_UID_STAT=y
 CONFIG_BCM4330_RFKILL=y
 CONFIG_TEGRA_CRYPTO_DEV=y
@@ -306,7 +306,7 @@ CONFIG_CHARGER_SMB347=y
 CONFIG_BATTERY_BQ27541=y
 CONFIG_SENSORS_TEGRA_TSENSOR=y
 CONFIG_SENSORS_INA219=y
-CONFIG_SENSORS_AL3010=y
+#CONFIG_SENSORS_AL3010=y
 CONFIG_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_TEGRA_WATCHDOG=y
